Remove Java 11 specific isBlank() method